--- a/package.json
+++ b/package.json
@@ -1,12 +1,38 @@
 {
   "name": "ssr-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server side rendering Demo Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "nodemon --watch build --exec node build/bundle.js",
+    "dev:build-server": "webpack --config webpack.server.js --watch",
+    "dev:build-client": "webpack --config webpack.client.js --watch"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "0.16.2",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "compression": "^1.7.3",
+    "concurrently": "3.5.0",
+    "express": "^4.16.4",
+    "express-http-proxy": "1.0.6",
+    "lodash": "^4.17.11",
+    "nodemon": "1.12.0",
+    "npm-run-all": "4.1.1",
+    "react": "16.0.0",
+    "react-dom": "16.0.1",
+    "react-helmet": "5.2.0",
+    "serialize-javascript": "1.4.0",
+    "webpack": "3.5.6",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "4.1.0",
+    "webpack-node-externals": "1.6.0"
+  }
 }
